[gd_scene load_steps=7 format=3 uid="uid://bggx2gj21vwdy"]

[ext_resource type="Texture2D" uid="uid://cjsm3a5okxuoy" path="res://art assets/textbox sample4.png" id="1_lmwfv"]
[ext_resource type="Script" uid="uid://bjgd7dxgvb2ty" path="res://scripts/question_2_scene.gd" id="1_xoynh"]
[ext_resource type="FontFile" uid="uid://d304qwinvdngc" path="res://art assets/determination.ttf" id="2_xoynh"]

[sub_resource type="Animation" id="Animation_xdx5d"]
resource_name = "typing_text"
length = 3.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("question2:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_rc1rl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("question2:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cfo5g"]
_data = {
&"RESET": SubResource("Animation_rc1rl"),
&"typing_text": SubResource("Animation_xdx5d")
}

[node name="Question 2 Scene" type="Node2D"]
script = ExtResource("1_xoynh")

[node name="TextBox" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(514.50006, 360)
scale = Vector2(4.1319995, 4.7999997)
texture = ExtResource("1_lmwfv")

[node name="SceneIdentifier" type="RichTextLabel" parent="."]
texture_filter = 1
offset_left = 367.0
offset_top = 270.0
offset_right = 511.0
offset_bottom = 300.0
scale = Vector2(2, 2)
theme_override_fonts/normal_font = ExtResource("2_xoynh")
text = "Question 2 Scene"

[node name="question2" type="RichTextLabel" parent="."]
texture_filter = 1
offset_left = 178.0
offset_top = 568.0
offset_right = 673.3333
offset_bottom = 611.3334
scale = Vector2(1.5, 1.5)
theme_override_fonts/normal_font = ExtResource("2_xoynh")
text = "So how did you know it happened? Did someone tell you?"
scroll_active = false
visible_characters = 0
visible_ratio = 0.0

[node name="question2Animation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_cfo5g")
}

[node name="ButtonManager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Acceptance" type="Button" parent="ButtonManager"]
visible = false
layout_mode = 0
offset_left = 258.0
offset_top = 638.0
offset_right = 439.0
offset_bottom = 695.0
theme_override_fonts/font = ExtResource("2_xoynh")
text = "No, what happened?"

[node name="Denial" type="Button" parent="ButtonManager"]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = 477.0
offset_top = 636.0
offset_right = 823.0
offset_bottom = 693.0
theme_override_fonts/font = ExtResource("2_xoynh")
text = "Yes, I got a call from one of my friends."

[connection signal="pressed" from="ButtonManager/Acceptance" to="." method="_on_acceptance_pressed"]
[connection signal="pressed" from="ButtonManager/Denial" to="." method="_on_denial_pressed"]
